# Whiskerlog

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  install.sh
.github/: dependabot.yml
src/: app.rs  lib.rs  main.rs
src/analysis/: alias_suggest.rs  danger.rs  experiment_detector.rs  heatmap.rs  mod.rs  network_analyzer.rs  package_tracker.rs  stats.rs
src/config/: mod.rs
src/db/: mod.rs  schema.sql
src/history/: detector.rs  enricher.rs  mod.rs  parser.rs
src/ui/: aliases.rs  commands.rs  dangerous.rs  experiments.rs  heatmap.rs  hosts.rs  mod.rs  network.rs  packages.rs  search.rs  sessions.rs  summary.rs  theme.rs
tests/: analysis_tests.rs  config_tests.rs  database_tests.rs  history_tests.rs  integration_tests.rs  ui_tests.rs
