[package]
name = "whiskerlog"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
env_logger = "0.11.8"
fuzzy-matcher = "0.3"
itertools = "0.14.0"
log = "0.4"
ratatui = "0.29.0"
regex = "1.10"
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
skim = "0.20.5"
tokio = { version = "1.0", features = ["full"] }
toml = "0.9.7"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
assert_matches = "1.5"
proptest = "1.4"

[[bin]]
name = "whiskerlog"
path = "src/main.rs"

[lib]
name = "whiskerlog"
path = "src/lib.rs"
